tests/baselines/reference/exportDefaultClassNameWithObject.errors.txt
tests/cases/conformance/externalModules/exportDefaultClassNameWithObject.ts(1,22): error TS2725: Class name cannot be 'Object' when targeting ES5 with module CommonJS.


==== tests/cases/conformance/externalModules/exportDefaultClassNameWithObject.ts (1 errors) ====
    export default class Object {}
                         ~~~~~~
!!! error TS2725: Class name cannot be 'Object' when targeting ES5 with module CommonJS.
    